styles/style.css
@media screen and (max-width: 768px) {
  /* Adjustments for smaller screens */
}

@media screen and (orientation: landscape) {
  /* Styles for landscape orientation */
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  height: 100%;
  width: 100%;
}

/* Navbar */
.logo-img {
  max-width: 100px;
  height: auto;
}

#navbarNav button.btn {
  margin-left: auto;
  border-radius: 2px;
}

.navbar-nav .nav-item {
  margin-right: 20px;
}

.navbar-nav .btn {
  margin-left: 15px;
}

/* Landing */

#carouselExample {
  overflow: hidden;
  margin-top: 6vh;
}

.carousel-inner {
  width: 100%;
  background-attachment: fixed;
}

.carousel-item {
  object-fit: cover;
  width: 100%;
  height: 87vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

/* The carousel container */
#carouselExample {
  position: relative;
  overflow: hidden;
}

/* Style for the carousel control buttons */
.carousel-control-prev,
.carousel-control-next {
  z-index: 3; /* Ensure the controls are above the title and overlay */
}

.carousel-item {
  position: relative;
}

.carousel-item .title {
  position: absolute;
  top: 10vh; /* Adjust the top position as needed */
  z-index: 1;
  text-align: center;
  color: white;
  font-size: 2rem !important;
  height: 20%;
  width: 100%;
  display: block;
}

.carousel-item .title p {
  font-size: 0.8em;
}

.custom-title {
  font-size: 2.5em;
  font-family: 'League Spartan', sans-serif;
  
}

.carousel-item .btn {
  width: 25vh;
  height: 8vh;
  font-size: 1.6em;
  border-radius: 3px;
  position: absolute;
  bottom: 25vh; /* Adjust the bottom position as needed */
  right: 45vh; /* Adjust the left position as needed */
  z-index: 1;
}

#Philbrook {
  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('images/Philbrook_Festival.jpeg');
  background-size: cover;
  background-attachment: fixed;
  background-position: center;
}
#Roosevelt {
  background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('images/Christmas\ Dining.png');
  background-size: cover;
  background-attachment: fixed;
  background-position: center;
}
#Nutcracker {
  background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('images/Nutcracker.jpg');
  background-size: cover;
  background-attachment: fixed;
  background-position: center; 
}
#Arvest {
  background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('images/Arvest\ skating\ rink.png');
  background-size: cover;
  background-attachment: fixed;
  background-position: center; 
}
#Rhema {
  background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('images/Rhema.jpeg');
  background-size: cover;
  background-attachment: fixed;
  background-position: center;  
}

/* Content sections */

#content-title {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 20vh;
  
}
#content-title h1 {
  font-family: 'League Spartan', sans-serif;
  font-size: 3.5rem;
}
.event-sn {
  display: flex;
  justify-content: space-around;
  padding-right: 30px;
  margin-top: 80px;
}
.event-sn img {
  width: 20%;
}
.event-cnt {
  width: 55%;
  justify-content: center;
}
/* Event Titles */
.event-cnt .card-title {
  text-align: center;
  font-size: 60px;
  font-family: Bayon;
  font-weight: 400;
  line-height: normal; 
  font-style: normal; 
}
/* Event Descriptions */
.event-cnt .card-text {
  text-align: center;
  font-family: Bayon;
  font-size: 22px;
  font-style: normal;
  font-weight: 400;
  line-height: normal; 
}
/* Date/Time For Events */
.event-cnt h5 {
  font-family: Bayon;
  text-align: center;
  font-size: 40px;
  font-style: normal;
  font-weight: 400;
  line-height: normal; 
}
/* Address For Events */
.event-cnt .event_address {
  text-align: center;
  font-family: Bayon;
  font-size: 22px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  margin-top: 15px;
}
/* Price Details For Events */  
.price h6 {
  text-align: center;
  font-family: Bayon;
  font-size: 22px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}
.book-now {
  display: flex;
  justify-content: space-around;
}
.price h6 {
  align-items: center;
  justify-content: center;
}
.book-now button {
  width: 150px;
}
.event-cnt button {
  font-size: 30px;
  font-family: Bayon;
}
/* .Circles for sizing of circle image */
.Circles {
  width: 505px;
  height: 500px;
  border-radius: 50%;
  overflow: hidden;
  box-shadow: 0 0 0 4px white;
}
/* .Circle_img fills .Circles's set parameters */
.Circles .circle_img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
/* Styling for about us section */
.About_us_container {
  width: 960px;
  margin: 0 auto 10rem auto;
}
.About_us_header {
  padding: 0 0 3rem;
  text-align: center;
}
.About_us_title {
  text-align: center;
  font-family: 'League Spartan', sans-serif;
  font-weight: 400;
  font-size: 55px;
  margin: 0;
}
.About_us_body {
  padding: 0 0 3rem;
}
.About_us_content {
  width: 50%;
}
.About_us_content h3 {
  font-family: 'League Spartan', sans-serif;
}
.About_us_content p {
  font-family: sans-serif;
}
.About_us_content img {
  outline: solid black;
}
/* Newsletter card styling */
.card {
  width: 240px;
  height: 254px;
  padding: 0 15px;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  gap: 12px;
  background: #fff;
  border-radius: 20px;
  margin: 5 4 3 2;
}
.card > * {
  margin: 0;
}
.card_title {
  font-size: 23px;
  font-weight: 900;
  color: #333;
}
.card_content {
  font-size: 13px;
  line-height: 18px;
  color: #333;
}
.card_form {
  display: flex;
  flex-direction: column;
  gap: 10px;
}
.card_form input {
  margin-top: 10px;
  outline: 0;
  background: rgb(255, 255, 255);
  box-shadow: transparent 0px 0px 0px 1px inset;
  padding: 0.6em;
  border-radius: 14px;
  border: 1px solid #333;
  color: black;
}
.card_form button {
  border: 0;
  background: #111;
  color: #fff;
  padding: 0.68em;
  border-radius: 14px;
  font-weight: bold;
}
.sign-up:hover {
  opacity: 0.8;
}
.card_container {
  align-items: center;
  justify-content: center;
  padding-left: 50rem;
  padding-top: 1rem;
}
.SignUpHeader {
  text-align: center;
  font-family: 'League Spartan', sans-serif;
}

.contact {
  display: flex;
  justify-content: flex-end;
}
.contact i {
  margin-left: 15px;
  margin-bottom: 15px;
}

.contact a {
  text-decoration: none;
  color: inherit;
}
.contact a:hover {
  transform: scale(1.2);
  transition: all .3s ease-in-out;
}

#address {
  margin-top: 20px;
}

#cont {
  width: 80%;
}

.hidden {
  display: none;
}

.bold-text {
  font-weight: 700;
  text-decoration: underline;
}

.email-error {
  color: rgba(227, 48, 36);
  margin-bottom: 7px;
}

.confirmed-state h3 {
  color: rgb(48, 165, 48);
}

.event_container {
  margin-bottom: 10rem;
}

.hidden_anchors {
  color: transparent;
  user-select: none;
}

